# lab-github-cicd-demo

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md  workflow.md
.github/PULL_REQUEST_TEMPLATE/: bugfix_template.md  feature_template.md  workflow_template.md
.github/workflows/: dispatch_test_input_print.yml  dispatch_test_print_context.yml  dispatch_test_variables_print.yml  push_test_print.yml  pylint.yml  schedule_test_print.yml
templates/: index.html
tests/: test_app.py
